Consolida funcionalidades MR-1 a MR-49
