# src/routes/student.routes.js
@@ -7,5 +7,7 @@ const router = express.Router();
 router.post("/alunos", authMiddleware, studentController.create);
 router.get("/alunos", authMiddleware, studentController.list);
 router.get("/alunos/:id", authMiddleware, studentController.show);
+router.patch("/alunos/:id", authMiddleware, studentController.update);
+router.delete("/alunos/:id", authMiddleware, studentController.disable);
 
 module.exports = router;
